<resources>
    <string name="app_name">学生签到考勤系统</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">课程</string>
    <string name="title_my">我的</string>
    <string name="my">我的</string>
    <string name="username">请输入账号(学号或教工号)</string>
    <string name="student_inquire">请输入学号(模糊查询)</string>
    <string name="teacher_inquire">请输入教工号(模糊查询)</string>
    <string name="inquire">查询</string>
    <string name="password">请输入密码</string>
    <string name="student_login">学生登录</string>
    <string name="teacher_login">教师登录</string>
    <string name="register">点击注册</string>
    <string name="admin">管理</string>
    <string name="todo">TODO</string>
    <string name="student_register">学生注册</string>
    <string name="teacher_register">教师注册</string>
    <string name="register_name">请输入姓名</string>
    <string name="register_sex">请输入性别(男/女)</string>
    <string name="register_class">请输入班级</string>
    <string name="register_department">请输入系别</string>
    <string name="register_phone">请输入电话</string>
    <string name="register_email">请输入邮箱</string>
    <string name="admin_login">登录</string>
    <string name="login_admin">管理员登录</string>
    <string name="register_text">注册</string>
    <string name="quit_login">退出登录</string>
    <string name="modify_password">修改密码</string>
    <string name="old_password">请输入原密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="new_password_again">请再次输入新密码</string>
    <string name="submit">提交</string>
    <string name="edit_mailbox">编辑邮箱</string>
    <string name="ok">确定</string>
    <string name="edit_email">请输入要编辑的内容</string>
    <string name="mobile_number">绑定手机号</string>
    <string name="bind_mobile">更换手机号码</string>
    <string name="phone_title">您的手机号</string>
    <string name="code_button">获取验证码</string>
    <string name="telephone">手机号码</string>
    <string name="verification_code">短信验证码</string>
    <string name="record_title">出勤查询</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password">请输入新密码</string>
    <string name="forget_ok">确定</string>
    <string name="sign_in_record">出勤记录</string>
    <string name="attendance_details">出勤详情</string>
    <string name="course_name">课程名称</string>
    <string name="attendance">出勤</string>
    <string name="absence_from_duty">缺勤</string>
    <string name="details">详情</string>
    <string name="record_null">没有考勤记录</string>
    <string name="teacher_null_course">没有课程</string>
    <string name="student_null">没有该学生</string>
    <string name="teacher_null">没有该教师</string>
    <string name="course_null">没有该课程</string>
    <string name="teacher_course_null">没有该教师课程</string>
    <string name="class_course_null">没有该班级课程</string>
    <string name="student_name">学生姓名</string>
    <string name="student_id">学号</string>
    <string name="teachers_id">教工号</string>
    <string name="student_phone">手机号</string>
    <string name="student_email">电子邮箱</string>
    <string name="course_id">课程编号</string>
    <string name="teacher_name">授课教师</string>
    <string name="teacher_id">教师工号</string>
    <string name="order">序号</string>
    <string name="date">日期</string>
    <string name="attendance_status">考勤</string>
    <string name="teacher_name_2">教师姓名</string>
    <string name="class_id">班级号</string>
    <string name="help">请输入班级号</string>
    <string name="choice">请选择</string>
    <string name="time">时间日期</string>
    <string name="name">姓名</string>
    <string name="quit">退出</string>
    <string name="home">首页</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="course">课程</string>
    <string name="teacher_course">教师课程</string>
    <string name="class_course">班级课程</string>
    <string name="student_information">学生信息</string>
    <string name="teacher_information">教师信息</string>
    <string name="course_information">课程信息</string>
    <string name="teacher_course_information">教师课程信息</string>
    <string name="class_course_information">班级课程信息</string>
    <string name="sex">性别</string>
    <string name="courses_id">课程号</string>
    <string name="courses_name">课程名</string>
    <string name="department">系别</string>
    <string name="add">增</string>
    <string name="delete">删</string>
    <string name="select">查</string>
    <string name="modify">改</string>
    <string name="prompt">提示</string>
    <string name="zero">0</string>
    <string name="delete1">Del</string>
    <string name="clear">C</string>
    <string name="multiplication">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">÷</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add1">+</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="percent">%</string>
    <string name="data">输入需要转换的数据</string>
    <string name="convert_to">转换为</string>
    <string name="convert">转换</string>
    <string name="result">结果</string>
    <string name="smallest_integer">最小整数</string>
    <string name="maximum_integer">最大整数</string>
    <string name="ten">10</string>
    <string name="roll_call_password">请输入点名口令</string>
    <string name="tips_student">tips:\n请确认当前课程是您所选课程，并输入正确的点名口令。</string>
    <string name="tips_teacher">tips:\n请选择发起签到的班级，点击确认发起签到</string>
    <string name="check_in_code">当前还未生成签到码</string>
</resources>
