<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:ignore="ButtonStyle">

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/one" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/two"/>

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:text="@string/three"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#FF5722"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/add1" />

</LinearLayout>