<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/teacher_course"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle" >

        <Button
            android:id="@+id/add_teacher_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="18sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_teacher_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/delete"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/select_teacher_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/select"
            android:textSize="18sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/teacher_course_information"
        android:textColor="@color/colorPrimary" />

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#EEEEEE">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="#00BCD4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/teachers_id"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/courses_id"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/courses_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/null_teacher_course"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/teacher_course_null"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone"/>

            <com.example.studentattend.override.ListViewForScrollView
                android:id="@+id/teacher_course_inquire_listView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>