<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:ignore="ButtonStyle">

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/eight"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:text="@string/nine"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#FF5722"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/multiplication" />

</LinearLayout>