<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/student"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/input_background">

            <ImageView
                android:layout_width="16.4dp"
                android:layout_height="21.1dp"
                android:layout_marginBottom="13.4dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="13.5dp"
                android:src="@mipmap/ic_user"
                android:contentDescription="@string/todo" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="19.6dp"
                android:layout_marginTop="9dp"
                android:background="@color/editText"/>

            <EditText
                android:id="@+id/student_inquire"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:hint="@string/student_inquire"
                android:background="@null"
                android:textSize="18sp"
                android:autofillHints="user_id"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/student_inquire_button"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/inquire"
            android:background="@drawable/button_background"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/student_information"
        android:textColor="@color/colorPrimary" />

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#EEEEEE">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="#00BCD4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/student_id"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:text="@string/sex" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_weight="3"
                    android:text="@string/class_id" />

            </LinearLayout>

            <TextView
                android:id="@+id/null_student"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/student_null"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone"/>

            <com.example.studentattend.override.ListViewForScrollView
                android:id="@+id/student_inquire_listView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>