<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:ignore="ButtonStyle">

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#FF5722"
        android:background="@drawable/border2"
        android:text="@string/clear"
        android:textSize="30sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#FF5722"
        android:background="@drawable/border2"
        android:text="@string/delete1"
        android:textAllCaps="false"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/percent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#FF5722"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/percent" />

    <Button
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textColor="#FF5722"
        android:text="@string/division"
        android:textSize="30sp"/>

</LinearLayout>