<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:ignore="ButtonStyle">

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:textSize="30sp"
        android:text="@string/zero"/>

    <Button
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border2"
        android:text="@string/point"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textColor="#FFFFFF"
        android:background="@drawable/border"
        android:textSize="30sp"
        android:text="@string/equal" />

</LinearLayout>