<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#00BCD4">

        <TextView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/title_dashboard"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="19.6dp"/>

            <EditText
                android:id="@+id/attendNumber"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:hint="@string/roll_call_password"
                android:inputType="number"
                android:background="@null"
                android:textSize="18sp"
                android:autofillHints="attendNumber" />

            <Button
                android:id="@+id/attendButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/submit"
                android:textSize="18sp"
                android:background="#00BCD4"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/tips_student"
        android:textSize="16sp"/>

</LinearLayout>